--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,10 +1,11 @@
-contact_us: /contact-us/
+contact_us: https://www.nparks.gov.sg/contact-us
 show_reach: true
-feedback: 
+feedback: http://www.nparks.gov.sg/feedback
 faq: /faq/
 social_media:
-    facebook: https://www.facebook.com/YourFBPage
-    twitter: https://www.twitter.com/YourTwitter
-    youtube: https://www.youtube.com/YourYoutube
-    instagram: https://www.instagram.com/your.insta/
-    linkedin: https://www.linkedin.com/company/YourAgency
+  facebook: https://www.facebook.com/nparksbuzz
+  twitter: https://twitter.com/nparksbuzz
+  youtube: https://www.youtube.com/NParksSG
+  instagram: https://www.instagram.com/accounts/login/
+  linkedin: https://www.linkedin.com/company/national-parks-board
+  telegram: https://t.me/s/nparksbuzz
