--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,4 @@
-##################################
-#                                #
-# Feel free to edit this file :) #
-#                                #
-##################################
-
-logo: /images/isomer-logo.svg
-
+logo: /images/NParks%20Logo.jpg
 links:
   - title: Contact Us
     url: /contact-us/
